[package]
name = "easy-fs-fuse"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
clap = "2.33.3"
easy-fs = { path = "../easy-fs-normal" }
rand = "0.8.0"

# [features]
# board_qemu = []
# board_k210 = []